manage project folder structure and generate javadoc :)